--- a/Ishaan/home.html
+++ b/Ishaan/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -14,11 +15,11 @@
             <nav>
                 <div class="nav_first">
                     <div class="nav_icon">
-                        <a><img src="Website_clone/icons/spotify_icon.png"></a>
+                        <a><img src="icons/spotify_icon.png"></a>
                     </div>
                     <div class="nav_buttons">
                         <div class="home_button">
-                            <button><img src="Website_clone/icons/home.png">
+                            <button><img src="icons/home.png">
                             </button>
                         </div>
                             <input class="search" type="search" placeholder="What do you want to play?">
@@ -37,6 +38,33 @@
             </nav>
         </div>
     </header>
+    <section class="home_left">
+        <div class="home_left_panel1">
+            <div >
+            <h4>Your library</h4>
+        </div>
+        <div>
+           <h1>+</h1>
+        </div>
+        </div>
+        <div class="box_home_left1">
+            <div>
+                <h4>
+                    Create your first playlist
+                </h4>
+            </div>
+            <div>
+                <p>
+                    It's easy, we'll  help you
+                </p>
+            </div>
+            <div>
+                <button class="box_home_left1_button">
+                    Create Playlist
+                </button>
+            </div>
+        </div>
+    </section>
 
 
 </body>
