--- a/Ishaan/home.html
+++ b/Ishaan/home.html
@@ -10,34 +10,32 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <nav>
-                <div class="nav_first">
-                    <div class="nav_icon">
-                        <a><img src="icons/spotify_icon.png"></a>
-                    </div>
-                    <div class="nav_buttons">
-                        <div class="home_button">
-                            <button><img src="icons/home.png">
-                            </button>
-                        </div>
-                            <input class="search" type="search" placeholder="What do you want to play?">
-                    </div>
+    <div>
+        <nav>
+            <div class="nav_first">
+                <div class="nav_icon">
+                    <a><img src="icons/spotify_icon.png"></a>
                 </div>
-                <div>
-                    <div class="nav_buttons" class="nav_second">
-                        <div><button>Premium</button></div>
-                        <div><button>Support</button></div>
-                        <div><button class="border_left">Download</button></div>
-                        <div><button>Install app</button></div>
-                        <div><button class="signup_button">signup</button></div>
-                        <div><button class="login_button">Login</button></div>
+                <div class="nav_buttons">
+                    <div class="home_button">
+                        <button><img src="icons/home.png">
+                        </button>
                     </div>
+                        <input class="search" type="search" placeholder="What do you want to play?">
                 </div>
-            </nav>
-        </div>
-    </header>
+            </div>
+            <div>
+                <div class="nav_buttons" class="nav_second">
+                    <div><button>Premium</button></div>
+                    <div><button>Support</button></div>
+                    <div><button class="border_left">Download</button></div>
+                    <div><button>Install app</button></div>
+                    <div><button class="signup_button">signup</button></div>
+                    <div><button class="login_button">Login</button></div>
+                </div>
+            </div>
+        </nav>
+    </div>
     <section class="home_left">
         <div class="home_left_panel1">
             <div >
@@ -63,6 +61,26 @@
                     Create Playlist
                 </button>
             </div>
+        </div>
+        <div class="box_home_left1">
+            <div>
+                <h4>Let's find some podcasts to follow</h4>
+            </div>
+            <div>
+                <p>We will keep you updated on new episodes</p>
+            </div>
+            <div>
+            <button class="box_home_left1_button">Browse Podcasts</button>
+            </div>
+        </div>
+        <div>
+            <div>Legal</div>
+            <div>Safety & Privacy Center</div>
+            <div>Privacy Policy</div>
+            <div>cookies</div>
+            <div>About ads</div>
+            <div>Accebilites</div>
+            <div>cookies</div>
         </div>
     </section>
 
