added trending songs section

--- a/Ishaan/home.html
+++ b/Ishaan/home.html
@@ -21,7 +21,7 @@
                         <button><img src="icons/home.png">
                         </button>
                     </div>
-                        <input class="search" type="search" placeholder="What do you want to play?">
+                    <input class="search" type="search" placeholder="What do you want to play?">
                 </div>
             </div>
             <div>
@@ -36,53 +36,117 @@
             </div>
         </nav>
     </div>
-    <section class="home_left">
-        <div class="home_left_panel1">
-            <div >
-            <h4>Your library</h4>
-        </div>
-        <div>
-           <h1>+</h1>
-        </div>
-        </div>
-        <div class="box_home_left1">
-            <div>
-                <h4>
-                    Create your first playlist
-                </h4>
+    <div class="section">
+        <section class="home_left">
+            <div class="home_left_panel1">
+                <div>
+                    <h4>Your library</h4>
+                </div>
+                <div>
+                    <h1>+</h1>
+                </div>
             </div>
-            <div>
-                <p>
-                    It's easy, we'll  help you
-                </p>
+            <div class="box_home_left1">
+                <div>
+                    <h4>
+                        Create your first playlist
+                    </h4>
+                </div>
+                <div>
+                    <p>
+                        It's easy, we'll help you
+                    </p>
+                </div>
+                <div>
+                    <button class="box_home_left1_button">
+                        Create Playlist
+                    </button>
+                </div>
             </div>
-            <div>
-                <button class="box_home_left1_button">
-                    Create Playlist
-                </button>
+            <div class="box_home_left1">
+                <div>
+                    <h4>Let's find some podcasts to follow</h4>
+                </div>
+                <div>
+                    <p>We will keep you updated on new episodes</p>
+                </div>
+                <div>
+                    <button class="box_home_left1_button">Browse Podcasts</button>
+                </div>
             </div>
-        </div>
-        <div class="box_home_left1">
-            <div>
-                <h4>Let's find some podcasts to follow</h4>
+            <div class="box_home_left3">
+                <div>Legal</div>
+                <div>Safety & Privacy Center</div>
+                <div>Privacy Policy</div>
+                <div>cookies</div>
+                <div>About ads</div>
+                <div>Accessbility</div>
             </div>
-            <div>
-                <p>We will keep you updated on new episodes</p>
+            <div class="cookie">Cookies</div>
+
+            <div class="language">
+                <div class="english">
+                    English
+                </div>
             </div>
-            <div>
-            <button class="box_home_left1_button">Browse Podcasts</button>
+        </section>
+        <section class="home_right">
+            <div class="home_right_heading">
+                <h3>Trending Songs</h3>
             </div>
-        </div>
-        <div>
-            <div>Legal</div>
-            <div>Safety & Privacy Center</div>
-            <div>Privacy Policy</div>
-            <div>cookies</div>
-            <div>About ads</div>
-            <div>Accebilites</div>
-            <div>cookies</div>
-        </div>
-    </section>
+            <div class="trending_now">
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
 
 </body>
