--- a/Ishaan/home.html
+++ b/Ishaan/home.html
@@ -42,8 +42,8 @@
                 <div>
                     <h4>Your library</h4>
                 </div>
-                <div>
-                    <h1>+</h1>
+                <div class="add_icon">
+                    <div>+</div>
                 </div>
             </div>
             <div class="box_home_left1">
@@ -145,6 +145,164 @@
                     </div>
                 </div>
             </div>
+            <div class="home_right_heading">
+                <h3>Popular Artists</h3>
+            </div>
+            <div class="popular_artist">
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+            </div>
+            <div class="home_right_heading">
+                <h3>Popular albums and singles</h3>
+            </div>
+            <div class="popular_albums_and_singles">
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+            </div>
+            <div class="home_right_heading">
+                <div>
+                    <h3>Popular Radio</h3>
+                </div>
+            </div>
+            <div class="popular_radio">
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="" alt="poster" class="card_poster">
+                        <div class="card_name">Song name</div>
+                        <div class="card_singer">Singer</div>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </div>
 
