--- a/Spotify.html
+++ b/Spotify.html
@@ -7,11 +7,13 @@
         <link rel="icon" type="image/png" href="Icons/android-chrome-512x512.png" class="spotify icon">
          </head>
         <body> 
-           <nav class="navbar">
-            <div><a href="https://open.spotify.com/" class="Spotify-logo-button">
+          <div class="navbar">
+            <div class="nav-left"> 
+            <a href="https://open.spotify.com/" class="Spotify-logo-button">
                  
                 <img src="Icons/social(1).png" alt="Spotify-logo" >
             </a> </div>
+            <div class="nav-center">
             <div>
                 <a class="Home-icon" href="https://open.spotify.com/">
                     <img src="Icons/home(1).png" alt="Home">
@@ -21,6 +23,8 @@
             <div>
                 <input type="text" placeholder="What do you want to play?" class="Search-bar">
             </div>
+            </div>
+            <div class="nav-right">
         <div>
             <a href="https://apps.microsoft.com/detail/9NCBCSZSJRSB?hl=en-in&gl=IN&ocid=pdpshare" target="_blank" class="App-Link">
                 <b>Install App</b>
@@ -31,12 +35,18 @@
                 <img src="Icons/bells.png" alt="What's New">
             </a>
         </div>
-        <div><a>
-            <img src="Icons/group(1).png" alt="Friend Activity" class="Friend-Activity">
-            <span class="tooltip">Friend Activity</span>
+        <div><a class="Friend-Activity">
+            <img src="Icons/group(1).png" alt="Friend Activity" >
+           
             </a>
         </div>
-        </nav> 
+        <div>
+            <a class="Account">
+                <img src="Icons/letter-s(2)(1).png" alt="Profile">
+            </a>
+        </div>
+    </div>
+    </div> 
         </body>
    
 </html>
